# EquisetumReivew

./: .gitignore  CMakeLists.txt  README.md  main_window.cpp  vcpkg.json
modules/: Main.qml  MenuButton.qml  SlideBar.qml  SlideContext.qml  SlideIcon.qml
res/: resource.qrc
src/: base_db_operator.cpp  base_db_operator.h  database_service.cpp  database_service.hpp  db_notice_operator.cpp  db_notice_operator.h  db_todo_operator.cpp  db_todo_operator.h  id_generator.cpp  id_generator.h  json_maker.cpp  json_maker.h  main.cpp  notice_controller.cpp  notice_controller.h  singleton_template.h
